[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omics-ai-explorer"
version = "0.1.0"
authors = [
    {name = "Marc Fiume", email = "marc@dnastack.com"},
]
description = "Python client library for Omics AI Explorer instances"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["genomics", "bioinformatics", "omics", "explorer", "api", "client", "dnastack"]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "twine",
    "build",
]

[project.urls]
Homepage = "https://github.com/mfiume/omics-ai-python-library"
Documentation = "https://github.com/mfiume/omics-ai-python-library#readme"
Repository = "https://github.com/mfiume/omics-ai-python-library.git"
"Bug Reports" = "https://github.com/mfiume/omics-ai-python-library/issues"
Changelog = "https://github.com/mfiume/omics-ai-python-library/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
omics_ai = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]